# TestTasks

./: .gitignore  README.md  pyproject.toml
data/: README.md  first.py  predicted_categories.xlsx  second.py  true.xlsx  Дерево категорий.xlsx
